--- a/vignettes/influenza-forecasting.Rmd
+++ b/vignettes/influenza-forecasting.Rmd
@@ -9,46 +9,247 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Influenza is an ideal case study for the forecasting of infectious disease. It is present somewhere in the world at all times in seasonal form and also causes pandemics and 
+## Objectives
 
-## Vignette Info
+After successfully completing this practical, you should be able to:
+* Understand the objectives of forecasting
+* Understand how accuracy in forecasting is assessed
+* Be able to use a linear model to make a forecast (appropriate R code provided)
+* Be able to use a simple mechanistic model to make a forecast (appropriate R code provided)
+* Be able to use a historical null model as a benchmark
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+## Format
 
-## Styles
+**Timing**:  We have sufficient time to meet our objectives, however, we expect people to progress at different rates depending on their familiarity with the concepts and their experience with R.  Extension questions are included for anyone who finishes early, or for you to look over outside of this practical.  At various points in time we will come together as a group to review answers and to discuss issues that arise. 
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+**Approach**: This practical is designed to be completed as an individual activity, however discussion with others is encouraged.  The initial questions are very specific and are designed to help you familiarise yourself with the model and its implementation. As you move through the practical, the questions become more and more open-ended.
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
+**Using R**:  We will continue using R in this practical session.  You will be provided with the R code for the practical.
 
-## Figures
+To begin, please do the following (see code chunk in next paragraph):
+1. Check that your R installation has the package `devtools` installed by typing `library(devtools)` and making sure there are no error messages.
+2. Install the latest version of the package `idd` with the command `install_github("c97sr/idd")`
+3. Load the package with `library(idd)`
+4. Reproduce this document with the command `vignette(influenza-forecasting)`
+5. Set up an answer document in word and make sure you can copy and paste charts from R to word
 
-The figure sizes have been customised so that you can easily put two images side-by-side. 
 
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+Enter the following commands:
+```{r setup, include=FALSE}
+devtools::load_all()
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
-
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r setup students, eval=FALSE}
+devtools::install_github("c97sr/idd")
+library(idd)
 ```
 
-Also a quote using `>`:
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+You should now have all the files you need to complete the practical.
+
+To access the help files for the functions used in the practical, type `help("function_name")` (e.g. `help("extract_incidence")`).
+To look at the source code for the functions, type the function name by itself (e.g. `extract_incidence`).
+
+## Background to the Task
+
+You will be using WHO data showing weekly influenza incidence from many different countries.  For a specific country you will be shown the weekly incidence for a period of 52 weeks.  Using a small subset of this data, you will be predicting the incidence for the coming weeks and comparing your predictions with the actual data. You will investigate different models.
+
+
+## 1. Initial investigation of the data
+
+SECTION NEEDED ON MULTIPLE YEARS
+CRITERION NEEDED FOR EPIDEMIC START
+
+How many weekly incidence reports do you have in your dataset?
+What month(s) and years(s) does the dataset contain?
+Q: for each year, idenitfy the peak timing of the epidemic, the peak incidence, 
+and the peak intensity.  Record your results in a table.
+
+Now plot the weekly incidence data for Israel in 2016.
+
+```{r plot incidence}
+data("fluIliCountryData")
+incidence_data <- extract_incidence(fluIliCountryData, 
+                    country = "ISR", 
+                    year = 2016)
+
+plot_incidence(incidence_data, log_scale = FALSE)
+```
+
+What does the epidemic curve look like?
+
+We will now use our knowledge of the real situation to explore different forecast models.
+
+LUNCH BREAK
+
+## 2. Linear Regression Model
+
+Assume that we are part way through the time period covered by the data, at week 47. We have the weekly incidence for week 47 and the four preceding weeks, so 5 data points in total. We can fit a linear model to our data points to predict future weekly incidence values.
+
+First we fit the linear model.
+Run the code
+```{r}
+linear_regression_output <- linear_regression(incidence_data,
+                              current_week = 47,
+                              n_weeks_prior = 4,
+                              log_transform = FALSE)
+print(linear_regression_output)
+```
+
+Q. What are the meanings of the values for `intercept` and `gradient`?
+
+Now we use the fitted model to forecast the incidence for future weeks.
+Run the code
+
+```{r}
+forecast_df <- extract_forecasted_points(linear_regression_output, 
+                                         incidence_data,
+                                         weeks_ahead = 1,
+                                         log_transform = FALSE)
+plot_incidence(forecast_df)
+```
+
+This gives us a plot with a forecast for 1 week ahead. Save the plot.
+
+Q: What are the black, red and blue points showing?
+Q: Does the model look to be giving a good prediction?
+
+Change the code to get a plot for 2 weeks ahead.
+*Note: we have stored information in for our plot in an object called `forecast_df`. When you change the code for 2 weeks ahead, this will overwrite `forecast_df `.  This is not a problem, however if you would like to save the information for different plots then you must create new objects, eg `forecast_df2`.*
+
+Now look at 3, 4, 5,... weeks ahead.  Remember to save any plots that you want to keep.
+
+Q: Where, if anywhere, do you think the model gives a good prediction?  Does accuracy change over time? If so, how?
+
+
+### How can we assess if a forecast is accurate?
+
+From the previous question you may have developed a personal view on when the model is good, however we want to have a formal way of defining good.  We can consider if a predication point lies within 25% either way of the actual value.  We can do this for all prediction points and then consider the proportion of points that are within this tolerance.
+
+```{r}
+calc_forecast_accuracy(forecast_df)
+```
+
+Q Vary the `weeks_ahead` in `forecast_df` and note down the different accuracies.  Begin by looking at 1, 3, 6, 9, and 12 weeks ahead.
+
+Now repeat this forecasting process but starting week 49.  In the code to produce `linear_regression_output`, change `current_week` to 49.  Keep a copy of the results and compare them to your results for starting week 47.
+
+Q  Is your forecast any better?
+
+Now repeat this forecasting process but using data from more weeks prior.  In the code to produce `linear_regression_output`, change `n_weeks_prior` to 8.  Keep a copy of the results and compare them to your results using data from 4 weeks prior.
+
+Q  Is your forecast any better?
+
+## 3. Log Linear Regression Model
+
+We will now repeat what we have just done but will perform linear regression on the log transform of the data.
+
+Run the code
+```{r}
+linear_regression_output <- linear_regression(incidence_data,
+                              current_week = 47,
+                              n_weeks_prior = 4,
+                              log_transform = TRUE)
+
+forecast_df <- extract_forecasted_points(linear_regression_output,
+                                         incidence_data,
+                                         weeks_ahead = 1,
+                                         log_transform = TRUE)
+
+plot_incidence(forecast_df)
+calc_forecast_accuracy(forecast_df)
+```
+
+Q: Do you think this will be better? Worse?
+
+As before, change the number of weeks ahead that you forecast, and the number of previous data points to include.
+
+Q: How do forecasts with the log transform differ qualitatively from forecasts without the log transform?
+
+Q: Where, if anywhere, do you think the model gives a good prediction?  Does accuracy change over time? If so, how?
+
+Q: Change the starting week, as before, to 49.
+
+##########################################################################
+
+## 4. SEIR Model
+
+SEIR (Susceptible-Exposed-Infected-Recovered) models are often used to model influenza.  You will now look at a forecast using an SEIR model.
+The model equations are
+
+$$\frac{dS}{dt} = -\frac{\beta SI}{N}$$
+$$\frac{dE}{dt} = \frac{\beta SI}{N} - \frac{E}{\tau_E}$$
+$$\frac{dI}{dt} = \frac{E}{\tau_E} - \frac{I}{\tau_I}$$
+$$\frac{dR}{dt} = \frac{I}{\tau_I}$$
+Table 1 contains a description of model parameters.
+To do: make this table
+
+The equation for the cumulative incidence is
+$$\frac{dC}{dt} = \frac{E}{\tau_E}$$;
+that is, the cumulative incidence is the number of individuals which have ever entered the infectious class by a given time.
+The incidence during a given week can then be obtained by subtracting the cumulative incidence of that week from the cumulative incidence in the previous week.
+
+To make a forecast using the SEIR model, we fit the model parameters to the incidence data which we are using to forecast.
+In this practical, we will focus on fitting the basic reproduction number $R_0$, and assume that all other parameter values are known (see table above).
+
+We fit the model to the data by maximising the likelihood of observing the data given model parameters.
+We will assume that the observed incidence is Poisson distributed with respect to the actual incidence, with an additional correction for the reporting rate.
+
+First, we will plot the log likelihood for a range of $R_0$, to get a sense of where the maximum might be.
+
+```{r}
+current_week <- 47
+starting_week <- 37 # our guess for the start time of the epidemic. We assume that
+# the epidemic starts with 100 infectious individuals at this time.
+R_0_min <- 1
+R_0_max <- 5
+likelihood_profile_output <- likelihood_profile_seir(incidence_data, current_week, starting_week, R_0_min, R_0_max)
+plot_likelihood_profile(likelihood_profile_output)
+```
+
+Q: from looking at the likelihood profile, what is the most likely value of R_0?
+Is this a reasonable value of R_0?
+
+When we fit the SEIR model to the data, we will need to choose reasonable bounds of R_0 to search over.
+Plotting the likelihood profile helps us choose these bounds.
+The bounds should include the peak of the log likelihood which we have seen visually.  
+Ideally it should not include very flat regions of parameter space where the fitting algorithm will have trouble finding the maximum (in this case, very high values of R_0).
+
+By visually inspecting the plot we decide that we will search between $R_0 = 1$ and $R_0 = 2$.
+Run the code
+```{r}
+R_0_min <- 1
+R_0_max <- 2
+R_0 <- fit_seir(incidence_data, current_week, starting_week, R_0_min, R_0_max)
+print(R_0)
+```
+
+Q. What is the value of $R_0$ that maximises the likelihood?
+How does this compare to the value found visually?
+
+Now forecast the future incidence using the fitted model.
+Run the code
+```{r}
+# forecast using found value of R_0
+forecast_df <- extract_forecasted_points_seir(R_0, incidence_data, 
+                                           current_week,
+                                           starting_week, 
+                                           weeks_ahead = 10)
+
+# plot forecast
+plot_incidence(forecast_df)
+print(calc_forecast_accuracy(forecast_df))
+```
+Save a copy of your plot in your Word file.
+
+Q: What features of the incidence curve are captured by the SEIR model forecast which were not captured by the linear regression forecast?
+Q: Which weeks, if any, does the model give a good prediction for?
+
+Q: Change the starting week, as before, to 49 and 52.  How does the accuracy of the forecast change, in terms of the proportion of points within the threshold, and the peak timing and height?
+Q: how sensitive is the forecast to our guess of when the epidemic started?
+Q: what might be causes of error in the forecast?
+
+## Extension work
+
+If you have completed all of the tasks, please ask one of the course
+demonstrators for extension work.
