--- a/vignettes/influenza-forecasting.Rmd
+++ b/vignettes/influenza-forecasting.Rmd
@@ -31,13 +31,13 @@ After successfully completing this practical, you should be able to:
 To begin, please do the following:
 
 1. Check that your R installation has the package `devtools` installed by typing `library(devtools)` and making sure that there are no error messages.
-2. Install the latest version of the package `idd` with the command `install_github("c97sr/idd")`
+2. Install the latest version of the package `idd` with the command `install_github("c97sr/idd", build_vignettes = TRUE)`
 3. Load the package with `library(idd)`
 4. Reproduce this document with the command `vignette("influenza-forecasting")` 
 5. Set up an answer document in Word (or similar text editor) and make sure you can copy and paste charts from R to Word.
 
 
-```{r setup, include=FALSE, eval = FALSE}
+```{r setup, eval=FALSE}
 devtools::load_all()
 ```
 
@@ -45,7 +45,6 @@ devtools::load_all()
 devtools::install_github("c97sr/idd", build_vignettes = FALSE)
 library(idd)
 ```
-
 
 You should now have all the files you need to complete the practical.
 
@@ -93,85 +92,67 @@ The duration of the epidemic is the time between when the epidemic first exceeds
 **Qu. 1.4**: for each year (2010-2016), by visual inspection of the plot, identify the onset time, peak time, peak incidence and duration of the epidemic.  
 Record your results in a table.
 
-We will now use our knowledge of the real situation to explore different forecast models.
+We will now use our knowledge of the real situation to explore different models for prediction.
 
 LUNCH BREAK
 
-## 2. Linear Regression Model
+## 2. Linear Regression on Linear Incidence
 
-Assume that we are part way through the time period covered by the data, at week 47. We have the weekly incidence for week 47 and the four preceding weeks, so 5 data points in total. We can fit a linear model to our data points to predict future weekly incidence values.
+Assume that we are part way through the time period covered by the data, at week 49. We have the weekly incidence for week 49 and the four preceding weeks, so 5 data points in total. We can fit a linear model to our data points to predict future weekly incidence values.
 
 First we fit the linear model.
 Run the code
 ```{r}
 linear_regression_output <- linear_regression(incidence_data,
-                              current_week = 47,
+                              current_week = 49,
                               n_weeks_prior = 4,
                               log_transform = FALSE)
-print(linear_regression_output)
+```
+```{r eval = FALSE}
+linear_regression_output
 ```
 
 **Qu. 2.1** What are the meanings of the values for `intercept` and `gradient`?
 
-Now we use the fitted model to forecast the incidence for future weeks.
+**Extension Qu. 2.1a** Look at the source code of the function `linear_regression`.
+Find the line in the source code which performs the linear regression.
+Can you figure out what the function does? (Google may help.)
+
+Now we use the fitted model to predict the incidence for future weeks.
 Run the code
 
 ```{r}
-forecast_df <- extract_forecasted_points(linear_regression_output, 
+prediction_df <- extract_predicted_points(linear_regression_output, 
                                          incidence_data,
                                          weeks_ahead = 8,
                                          log_transform = FALSE)
-plot_incidence(forecast_df)
 ```
-
-This gives us a plot with a forecast for 1 week ahead. Save the plot.
+```{r eval = FALSE}
+plot_incidence(prediction_df)
+```
 
 **Qu. 2.2** What do you think the black, red and blue points represent on this chart?
 
-**Qu. 2.3** Does the model look to be giving a good prediction?
-
-Change the code to get a plot for 2 weeks ahead.
-*Note: we have stored information in for our plot in an object called `forecast_df`. When you change the code for 2 weeks ahead, this will overwrite `forecast_df `.  This is not a problem, however if you would like to save the information for different plots then you must create new objects, e.g. `forecast_df2`.*
-
-Now look at 3, 4, 5,... weeks ahead.  Remember to save any plots that you want to keep.
-
-**Qu. 2.4** Where, if anywhere, do you think the model gives a good prediction?  In qualitative terms, does prediction accuracy change over time? If so, how?
-
+**Qu. 2.3** At what times (if any) do you think the model gives a good prediction?  In qualitative terms, does prediction accuracy change over time? If so, how?
 
 ### How can we assess if a prediction is accurate?
 
-From the previous question you may have developed a personal view on when the model is \'good\', however we want to have a formal way of defining 'good'.  We can consider if a predication point lies within 25% either way of the actual value.  We can do this for all prediction points and then consider the proportion of points that are within this tolerance.
+From the previous question you may have developed a personal view on when the model is \'good\', however we want to have a formal way of defining 'good'.  We can consider if a prediction point lies within 25% either way of the actual value.  We can do this for all prediction points and then consider the proportion of points that are within this tolerance.
 
-Consider the example of making predictions at week 49, using data from the previous 4 weeks.  We want to make predictions about the coming 8 weeks.
+Consider the previous example of making predictions at week 49, using data from the previous 4 weeks.  We want to make predictions about the coming 8 weeks.
+Extract the predicted and observed incidence by running
 
-```{r}
-linear_regression_output <- linear_regression(incidence_data,
-                              current_week = 49,
-                              n_weeks_prior = 4,
-                              log_transform = FALSE)
-print(linear_regression_output)
-
-forecast_df <- extract_forecasted_points(linear_regression_output, 
-                                         incidence_data,
-                                         weeks_ahead = 8,
-                                         log_transform = FALSE)
-plot_incidence(forecast_df)
-
-forecast_df
+```{r eval = FALSE}
+extract_subset_prediction(prediction_df)
 ```
 
-MIGHT WANT TO SUBSET THE DATAFRAME TO RELEVANT ROWS ONLY
-PLEASE CHECK THESE QUESTIONS
+**Qu. 2.5** Calculate the accuracy interval for each data point: lower bound is 0.75 times the observed incidence; upper bound is 1.25 times the observed incidence. Record the information in a table. Now look to see if the prediction value lies with the accuracy interval range. Calculate the proportion of points where this holds.
+*Note: the poor qualitative fit by linear regression on linear incidence suggests that the proportion of "accurate" predictions will be low.*
+*Do not be alarmed if you get a very low proportion of "accurate" predictions -- this exercise will make more sense when we compare the proportion of "accurate" predictions using this model to the proportion of "accurate" predictions in the next section.*
 
-**Qu. 2.5** Look at the real data for the prediction weeks. Calculate the accuracy interval for each data point: lower bound is 0.75 times the incidence; upper bound is 1.25 times the incidence. Record the information in a table. Now look to see if the prediction value lies with the accuracy interval range. Calculate the proportion of of points where this holds.
-
-Now repeat this forecasting process but using data from more weeks prior.  In the code to produce `linear_regression_output`, change `n_weeks_prior` to 8.  Keep a copy of the results and compare them to your results using data from 4 weeks prior.
-
-**Qu. 2.6** For week 49, what was your best forecast?  For how many weeks is it accurate?
+**Qu. 2.6** What might be causes of error in the prediction?
 
 ## 3. Linear Regression on Log Incidence
-
-I HAVE CHANGED START WEEK TO 49. IF THIS IS STUPID PLEASE CHANGE BACK BUT BE AWARE THAT CURRENT ACCURACY SECTION USES 49.
 
 We will now repeat what we have just done but will perform linear regression on the log transform of the data.
 
@@ -182,73 +163,101 @@ linear_regression_output <- linear_regression(incidence_data,
                               n_weeks_prior = 4,
                               log_transform = TRUE)
 
-forecast_df <- extract_forecasted_points(linear_regression_output,
+prediction_df <- extract_predicted_points(linear_regression_output,
                                          incidence_data,
-                                         weeks_ahead = 1,
+                                         weeks_ahead = 8,
                                          log_transform = TRUE)
-
-plot_incidence(forecast_df)
+```
+```{r eval = FALSE}
+plot_incidence(prediction_df)
 ```
 
-As before, change the number of weeks ahead that you forecast, and the number of previous data points to include.
+**Qu. 3.1** How does the prediction with the log transform differ qualitatively from the prediction without the log transform?
 
-Code to let you calculate forecast accuracy:
-```{r}
-calc_forecast_accuracy <- function(forecast_df)
+**Qu. 3.2** When, if at any time, do you think the model gives a good prediction?  Does accuracy change over time? If so, how?
+
+**Qu. 3.3** Compare the accuracy of this prediction with the log transform to the prediction in the previous section.
+
+Now repeat this predicting process but using data from more weeks prior.  In the code to produce `linear_regression_output`, change `n_weeks_prior` to 5, 6, 7 and 8.  Keep a copy of the results and compare them to your results using data from 4 weeks prior.
+*Note: we have stored information in for our plot in an object called `prediction_df`. When you change the value of `n_weeks_prior` and re-run the code, this will overwrite `prediction_df`.  This is not a problem, however if you would like to save the information for different plots then you must create new objects, e.g. `prediction_df2`.*
+
+To speed up the process of calculating the accuracy, you can run
+```{r eval = FALSE}
+calc_prediction_accuracy(prediction_df)
 ```
 
-Q: How do forecasts with the log transform differ qualitatively from forecasts without the log transform?
+**Qu. 3.4** For a starting week of week 49, what is the value of `n_weeks_prior` that gives the best prediction?  For how many weeks is the prediction accurate?
 
-Q: How does the accuracy of forecasts with the log transform compare to forecasts without the log transform?
-
-Q: Where, if anywhere, do you think the model gives a good prediction?  Does accuracy change over time? If so, how?
-
-Q: Change the starting week, as before, to 49.
+**Qu. 3.5** What might be causes of error in the prediction?
 
 ##########################################################################
 
 ## 4. SEIR Model
 
-SEIR (Susceptible-Exposed-Infected-Recovered) models are often used to model influenza.  You will now look at a forecast using an SEIR model.
+SEIR (Susceptible-Exposed-Infected-Recovered) models are often used to model influenza.  You will now look at a prediction using an SEIR model.
 The model equations are
 
 $$\frac{dS}{dt} = -\frac{\beta SI}{N}$$
 $$\frac{dE}{dt} = \frac{\beta SI}{N} - \frac{E}{\tau_E}$$
 $$\frac{dI}{dt} = \frac{E}{\tau_E} - \frac{I}{\tau_I}$$
 $$\frac{dR}{dt} = \frac{I}{\tau_I}$$
-Table 1 contains a description of model parameters.
-To do: make this table
+
+The below table contains a description of model parameters.
+
+```{r, echo = FALSE}
+params_df <- data.frame(Parameter = c("$R_0 = \\beta \\tau_I$",
+                                      "$\\tau_E$",
+                                      "$\\tau_I$",
+                                      "$N$",
+                                      "$I_0$",
+                                      "$r$"),
+                        Description = c("Basic reproduction number",
+                                        "Latent period",
+                                        "Infectious period",
+                                        "Population size",
+                                        "Initial number of infectious individuals",
+                                        "Proportion of cases which are reported"),
+                                      Value = c("varied",
+                                                "1.6 day$^{-1}$",
+                                                "1 day$^{-1}$",
+                                                "$8.5 \\times 10^6$",
+                                                "100",
+                                                "0.006"))
+knitr::kable(params_df)
+```
 
 The equation for the cumulative incidence is
 $$\frac{dC}{dt} = \frac{E}{\tau_E}$$;
 that is, the cumulative incidence is the number of individuals which have ever entered the infectious class by a given time.
 The incidence during a given week can then be obtained by subtracting the cumulative incidence of that week from the cumulative incidence in the previous week.
 
-To make a forecast using the SEIR model, we fit the model parameters to the incidence data which we are using to forecast.
+To make a prediction using the SEIR model, we fit the model parameters to the incidence data which we are using to predict.
 In this practical, we will focus on fitting the basic reproduction number $R_0$, and assume that all other parameter values are known (see table above).
 
 We fit the model to the data by maximising the likelihood of observing the data given model parameters.
-We will assume that the observed incidence is Poisson distributed with respect to the actual incidence, with an additional correction for the reporting rate.
+We will assume that the observed incidence is Poisson distributed with respect to the actual incidence, with an additional correction for the proportion of cases which are reported.
 
 First, we will plot the log likelihood for a range of $R_0$, to get a sense of where the maximum might be.
 
 ```{r}
-current_week <- 47
+current_week <- 49
 starting_week <- 37 # our guess for the start time of the epidemic. We assume that
 # the epidemic starts with 100 infectious individuals at this time.
 R_0_min <- 1
 R_0_max <- 5
 likelihood_profile_output <- likelihood_profile_seir(incidence_data, current_week, starting_week, R_0_min, R_0_max)
+```
+```{r eval = FALSE}
 plot_likelihood_profile(likelihood_profile_output)
 ```
 
-Q: from looking at the likelihood profile, what is the most likely value of R_0?
-Is this a reasonable value of R_0?
+**Qu. 4.1** From looking at the likelihood profile, what is the most likely value of $R_0$?
+Is this a reasonable value of $R_0$?
 
-When we fit the SEIR model to the data, we will need to choose reasonable bounds of R_0 to search over.
+When we fit the SEIR model to the data, we will need to choose reasonable bounds of $R_0$ to search over.
 Plotting the likelihood profile helps us choose these bounds.
 The bounds should include the peak of the log likelihood which we have seen visually.  
-Ideally it should not include very flat regions of parameter space where the fitting algorithm will have trouble finding the maximum (in this case, very high values of R_0).
+Ideally it should not include very flat regions of parameter space where the fitting algorithm will have trouble finding the maximum (in this case, very high values of $R_0$).
 
 By visually inspecting the plot we decide that we will search between $R_0 = 1$ and $R_0 = 2$.
 Run the code
@@ -256,38 +265,51 @@ Run the code
 R_0_min <- 1
 R_0_max <- 2
 R_0 <- fit_seir(incidence_data, current_week, starting_week, R_0_min, R_0_max)
-print(R_0)
+```
+```{r eval = FALSE}
+R_0
 ```
 
-Q. What is the value of $R_0$ that maximises the likelihood?
+**Qu. 4.2** What is the value of $R_0$ that maximises the likelihood?
 How does this compare to the value found visually?
 
-Now forecast the future incidence using the fitted model.
+**Extension qu. 4.2a** Look at the source code of `fit_seir`.
+Identify the function which maximises the likelihood function.
+
+**Extension qu. 4.2b** Look at the source code of `solve_seir_model`.
+Match the lines in the functions to the differential equations.
+
+Now predict the future incidence using the fitted model.
 Run the code
 ```{r}
-# forecast using found value of R_0
-forecast_df <- extract_forecasted_points_seir(R_0, incidence_data, 
+# predict using found value of R_0
+prediction_df <- extract_predicted_points_seir(R_0, incidence_data, 
                                            current_week,
                                            starting_week, 
-                                           weeks_ahead = 10)
-
-# plot forecast
-plot_incidence(forecast_df)
-print(calc_forecast_accuracy(forecast_df))
+                                           weeks_ahead = 8)
+```
+```{r eval = FALSE}
+# plot prediction
+plot_incidence(prediction_df)
+calc_prediction_accuracy(prediction_df)
 ```
 Save a copy of your plot in your Word file.
 
-Q: What features of the incidence curve are captured by the SEIR model forecast which were not captured by the linear regression forecast?
+**Qu. 4.3** What features of the incidence curve are captured by the SEIR model prediction which were not captured by the linear regression prediction?
 
-Q: Which weeks, if any, does the model give a good prediction for?
+**Qu. 4.4** Which weeks, if any, does the model give a good prediction for?
 
-Q: Change the starting week, as before, to 49 and 52.  How does the accuracy of the forecast change, in terms of the proportion of points within the threshold, and the peak timing and height?
+**Qu. 4.5** Compare the prediction accuracy of the SEIR and linear regression models.
 
-Q: how sensitive is the forecast to our guess of when the epidemic started?
+**Qu. 4.6** Because the SEIR model can reproduce the shape of the epidemic curve, we can assess how well it captures the peak timing, peak incidence and duration of the epidemic.
+Perform this assessment.
 
-Q: what might be causes of error in the forecast?
+**Qu. 4.7** Change the starting week to take values between 45 and 5 (in the next year).  How does the accuracy of the prediction change, in terms of the proportion of points within the threshold, and the peak timing and height?
+
+**Extension qu. 4.7a** How sensitive is the prediction to our guess of when the epidemic started?
+
+**Qu. 4.8** What might be causes of error in the prediction?
 
 ## Extension work
 
-If you have completed all of the tasks, please ask one of the course
-demonstrators for extension work.
+If you have completed all of the tasks, please ask one of the course demonstrators for extension work.
