--- a/inst/doc/influenza-forecasting.Rmd
+++ b/inst/doc/influenza-forecasting.Rmd
@@ -20,6 +20,10 @@ After successfully completing this practical, you should be able to:
 * Be able to use a simple mechanistic model to make a forecast (appropriate R code provided).
 * Be able to use a historical null model as a benchmark.
 
+## Slides
+
+The slides that accompany this session are [here](https://goo.gl/chchNs) on google drive.
+
 ## Format
 
 **Timing**:  We have sufficient time to meet our objectives, however, we expect people to progress at different rates depending on their familiarity with the concepts and their experience with R.  Extension questions are included for anyone who finishes early, or for you to look over outside of this practical.  At various points in time we will come together as a group to review answers and to discuss issues that arise. 
