tidying up og vignette

--- a/vignettes/ongoing_containment.Rmd
+++ b/vignettes/ongoing_containment.Rmd
@@ -1,51 +1,63 @@
-#' ---
-#' title: "Ongoing containment as a policy objective"
-#' author: Steven Riley
-#' date: late 2023
-#' output: html_document
-#' ---
-#' 
-#' # Script designed to be run with library(rmarkdown) rmarkdown::render(), then run to
-#'
-#' ## Background
-#'
-#' This analysis was initially developed between mid-February and early morning of March
-#' 10th 2020. It was used to give early estimates of the possible impact of school
-#' closures.
-#'
-#' Next steps
-#'
-#' * add the processed excess mortality as a data object to the package
-#'
-#' ## Load functions and population data
-#'
-#' First clear memory
-rm(list=ls(all=TRUE))
+---
+title: "Ongoing containment as a policy objective"
+author: Steven Riley
+date: late 2023
+output: html_document
+---
 
-#' Load functions to run the hybrid model from local packages, from github or directly from local copies
-#' if that is how the code has been distributed.
+## Background
+
+This analysis was initially developed between mid-February and early morning of March
+10th 2020. It was used to give early estimates of the possible impact of school
+closures.
+
+Next steps
+
+* add the processed excess mortality as a data object to the package
+
+## Load functions and population data
+
+First clear memory
+
+```{r }
+rm(list=ls(all=TRUE))
+```
+
+Load functions to run the hybrid model from local packages, from github or directly from local copies
+if that is how the code has been distributed.
+
+```{r }
 ## source("~/git/idd/R/cov_hybrid.r")
 library(devtools)
 library(dplyr)
+```
 
-#' Install SR's idd package either from github or locally
+Install SR's idd package either from github or locally
+
+```{r }
 ## install_github("c97sr/idd")
 ## devtools::uninstall()
 ## devtools::load_all()
 library("idd")
+```
 
-#' Setup a population of size 66 million with a small timestep, and assume
-#' that there were 6000 infectious individuals at time 0. There are four groups
-#' in the model which would normally represent age groups. However, they are all
-#' assumed to be eqactly equal.
+Setup a population of size 66 million with a small timestep, and assume
+that there were 6000 infectious individuals at time 0. There are four groups
+in the model which would normally represent age groups. However, they are all
+assumed to be eqactly equal.
+
+```{r }
 dt <- 0.1
 pop <- 66000000*c(0.25,0.25,0.25,0.25)
 seed <- rep(6000/length(pop),length(pop))
 xvals <- seq(0,540,dt)
+```
 
-#' Make an initial run for 2 years with an R0 of 2.0 in a UK-like
-#' population, with a trickle seed of 10 cases per week and nop
-#' reactive behaviour change.
+Make an initial run for 2 years with an R0 of 2.0 in a UK-like
+population, with a trickle seed of 10 cases per week and nop
+reactive behaviour change.
+
+```{r }
 y1 <- idd::cov_hybrid(
     vecN=pop,
     vecI0=seed,
@@ -58,8 +70,11 @@ y1 <- idd::cov_hybrid(
     vecPS=rep(0.05,length(pop)),
     trickle=10,
     vecTcalc=xvals)
-#' Then run with a reactive drop when the virus is known to be present
-devtools::load_all()
+```
+
+Then run with a reactive drop when the virus is known to be present
+
+```{r }
 y2 <- cov_hybrid(
     vecN=pop,
     vecI0=seed,
@@ -72,7 +87,11 @@ y2 <- cov_hybrid(
     vecPS=rep(0.05,length(pop)),
     trickle=10,
     vecTcalc=xvals)
-#' Then run with a reactive drop when the virus is known to be present
+```
+
+Then run with a reactive drop when the virus is known to be present
+
+```{r }
 y3 <- cov_hybrid(
     vecN=pop,
     vecI0=seed,
@@ -85,7 +104,11 @@ y3 <- cov_hybrid(
     vecPS=rep(0.05,length(pop)),
     trickle=10,
     vecTcalc=xvals)
-#' Then run with a reactive drop when the virus is known to be present
+```
+
+Then run with a reactive drop when the virus is known to be present
+
+```{r }
 y4 <- cov_hybrid(
     R0=2.0,
     vecN=pop,
@@ -98,7 +121,11 @@ y4 <- cov_hybrid(
     vecPS=rep(0.05,length(pop)),
     trickle=10,
     vecTcalc=xvals)
-#' Then run with a reactive drop when the virus is known to be present
+```
+
+Then run with a reactive drop when the virus is known to be present
+
+```{r }
 y4A <- cov_hybrid(
     R0=2.0,
     vecN=pop,
@@ -123,8 +150,11 @@ y4B <- cov_hybrid(
     vecPS=rep(0.05,length(pop)),
     trickle=10,
     vecTcalc=xvals)
+```
 
-#' Plot the baselines
+Plot the baselines
+
+```{r }
 par(mfrow=c(1,2))
 for (s in c("","y")) {
     plot(y1$t/30,rowSums(y1$inf[,,1]/dt+1),
@@ -134,8 +164,11 @@ for (s in c("","y")) {
     points(y3$t/30,rowSums(y3$inf[,,1]/dt+1),col="green",type="l",lwd=2)
     points(y4$t/30,rowSums(y4$inf[,,1]/dt+1),col="cyan",type="l",lwd=2)
 }
+```
 
-#' Plot the sensitvities
+Plot the sensitvities
+
+```{r }
 par(mfrow=c(1,2))
 for (s in c("","y")) {
     plot(y1$t/30,rowSums(y1$inf[,,1]/dt+1),
@@ -147,8 +180,11 @@ for (s in c("","y")) {
     points(y4A$t/30,rowSums(y4A$inf[,,1]/dt+1),col="orange",type="l",lwd=2)
     points(y4B$t/30,rowSums(y4B$inf[,,1]/dt+1),col="magenta",type="l",lwd=2)
 }
+```
 
-#' Define a function to then output the total amount of infection
+Define a function to then output the total amount of infection
+
+```{r }
 tabdisp <- function(x)(formatC(signif(x,3), format="f", big.mark=",", digits=0))
 tabdisp(sum(y1$inf[,,1]))
 tabdisp(sum(y2$inf[,,1]))
@@ -156,17 +192,23 @@ tabdisp(sum(y3$inf[,,1]))
 tabdisp(sum(y4$inf[,,1]))
 tabdisp(sum(y4A$inf[,,1]))
 tabdisp(sum(y4B$inf[,,1]))
+```
 
-#' Output the total number of deaths
+Output the total number of deaths
+
+```{r }
 tabdisp(y1$sevIn*0.2 + y1$sevOut)
 tabdisp(y2$sevIn*0.2 + y2$sevOut)
 tabdisp(y3$sevIn*0.2 + y3$sevOut)
 tabdisp(y4$sevIn*0.2 + y4$sevOut)
 tabdisp(y4A$sevIn*0.2 + y4A$sevOut)
 tabdisp(y4B$sevIn*0.2 + y4B$sevOut)
+```
 
-#' Plot cumulative deaths for different scenarios
-#' Plot
+Plot cumulative deaths for different scenarios
+Plot
+
+```{r }
 par(mfrow=c(1,1))
 plot(0:1,type="n",ylim=c(0,4000),xlim=c(0,600/7),
      ylab="Cum COVID-19 Deaths",xlab="Time")
@@ -178,17 +220,23 @@ y_scen4 <- (rowSums(0.2*y4$csevtreat[,,1])+rowSums(y4$csevuntreat[,,1]))/sum(pop
 points(y4$t/7,y_scen4,type="l")
 y_scen4a <- (rowSums(0.2*y4$csevtreat[,,1])+0.6*rowSums(y4$csevuntreat[,,1]))/sum(pop)*100000
 points(y4$t/7,y_scen4a,type="l")
+```
 
-#' Output the proportion of herd immunity acheived at 18 months
+Output the proportion of herd immunity acheived at 18 months
+
+```{r }
 round(sum(y1$inf[,,1])/(sum(pop)/2)*100)
 round(sum(y2$inf[,,1])/(sum(pop)/2)*100)
 round(sum(y3$inf[,,1])/(sum(pop)/2)*100)
 round(sum(y4$inf[,,1])/(sum(pop)/2)*100)
 round(sum(y4A$inf[,,1])/(sum(pop)/2)*100)
 round(sum(y4B$inf[,,1])/(sum(pop)/2)*100)
+```
 
-#' Work to load up excess mortality data. This will go futher up in the final
-#' version of thius
+Work to load up excess mortality data. This will go futher up in the final
+version of thius
+
+```{r }
 localfn <- "/mnt/c/Users/sr/Documents/tmpdata/excess_death.csv"
 localfn_w <- "/mnt/c/Users/sr/Documents/tmpdata/excess_death_econ.csv"
 ## webfn <- "https://raw.githubusercontent.com/owid/covid-19-data/4132d2c726fa406d5ff934b4f6411f463992a07d/public/data/excess_mortality/excess_mortality.csv"
@@ -197,8 +245,11 @@ localfn_w <- "/mnt/c/Users/sr/Documents/tmpdata/excess_death_econ.csv"
 ## wwebfn <- "https://raw.githubusercontent.com/owid/covid-19-data/master/public/data/excess_mortality/excess_mortality_economist_estimates.csv"
 ## w <- read.csv(wwebfn)
 ## write.csv(w,file=localfn_w,row.names=FALSE)
+```
 
-#' These bits need to be coded as a data object
+These bits need to be coded as a data object
+
+```{r }
 y <- read.csv(localfn)
 z <- read.csv(localfn_w)
 names(z)
@@ -309,3 +360,4 @@ if (FALSE) {
   epsilon
 
 }
+```
